<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@drawable/tardis">
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/tDepart"
    app:fontFamily="@font/game_of_squids"
    android:textColor="@color/lawngreen"/>
    <Spinner
        android:id="@+id/SpinnerDepart"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="16dp"
        android:textColor="@color/red"/>

        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tArrive"
        app:fontFamily="@font/game_of_squids"
        android:textColor="@color/lawngreen"/>

    <Spinner
        android:id="@+id/SpinnerArrivee"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="16dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </com.google.android.material.textfield.TextInputLayout>

        <EditText
            android:id="@+id/iMontant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tMontant"
            android:inputType="numberDecimal"
            android:textColor="@color/red"/>
            />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">


        <Button
            android:id="@+id/bConvert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/bConvert"
            android:onClick="onConvert"
            />

        <Button
            android:id="@+id/bQuitt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/bQuitt"
            android:onClick="onQuitt"
            />
    </LinearLayout>



</androidx.appcompat.widget.LinearLayoutCompat>

